<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name_prod">Akvopedia</string>
    <string name="app_name_beta" tools:ignore="UnusedResources">Akvopedia Beta</string>
    <string name="app_name_alpha" tools:ignore="UnusedResources">Akvopedia Alpha</string>
    <string name="wikimedia">Wikimedia</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="search_hint">Search Akvopedia</string>
    <string name="nav_item_history">History</string>
    <string name="error_network_error">Cannot connect to the Internet.</string>
    <string name="page_error_retry">Retry</string>
    <string name="page_error_back_to_main">Go back</string>
    <string name="menu_clear_all_history">Clear history</string>
    <string name="page_does_not_exist_error">This page does not exist.</string>
    <string name="dialog_title_clear_history">Clear browsing history</string>
    <string name="dialog_message_clear_history">This will delete all of your browsing history, and close any currently open tabs. Are you sure?</string>
    <string name="nav_item_saved_pages">Saved pages</string>
    <string name="share_via">Share via</string>
    <string name="search_redirect_from">Redirected from %s</string>
    <string name="menu_page_show_tabs">Show tabs</string>
    <string name="menu_page_other_languages">Change language</string>
    <string name="menu_page_find_in_page">Find in page</string>
    <string name="menu_page_content_issues">Content issues</string>
    <string name="menu_page_similar_titles">Similar titles</string>
    <string name="menu_page_font_and_theme">Font and theme</string>
    <string name="menu_page_add_to_list">Add to reading list</string>
    <string name="menu_page_share">Share link</string>
    <string name="menu_long_press_open_page">Open</string>
    <string name="menu_long_press_open_in_new_tab">Open in new tab</string>
    <string name="menu_long_press_copy_page">Copy link address</string>
    <string name="menu_text_select_copy">Copy</string>
    <string name="menu_text_select_define">Define</string>
    <string name="menu_text_select_share">Share</string>
    <string name="menu_text_select_edit_here">Edit here</string>
    <string name="nav_item_nearby">Nearby</string>
    <string name="nearby_distance_in_meters">%d m</string>
    <string name="nearby_distance_in_kilometers">%.2f km</string>
    <string name="nearby_zoom_to_location">Zoom to a location on the map</string>
    <string name="last_updated_text">Last updated %s</string>
    <string name="talk_page_link_text">Talk</string>
    <string name="content_license_html"><![CDATA[Content is available under <a href=\"//creativecommons.org/licenses/by-sa/3.0/\">CC BY-SA 3.0</a> unless otherwise noted]]></string>
    <string name="edit_save_action_license_logged_in"><![CDATA[By saving, you agree to the <a href="https://wikimediafoundation.org/wiki/Terms_of_Use">Terms of Use</a>, and to irrevocably release your contributions under the <a href="https://creativecommons.org/licenses/by-sa/3.0/">CC BY-SA 3.0</a> license.]]></string>
    <string name="edit_save_action_license_anon"><![CDATA[By saving, you agree to the <a href="https://wikimediafoundation.org/wiki/Terms_of_Use">Terms of Use</a>, and to irrevocably release your contributions under the <a href="https://creativecommons.org/licenses/by-sa/3.0/">CC BY-SA 3.0</a> license. Edits will be attributed to the IP address of your device. If you <a href="https://#login">log in</a>, you will have more privacy.]]></string>
    <string name="preference_title_language">Akvopedia language</string>
    <string name="preference_languages_filter_hint">Search</string>
    <string name="langlinks_filter_hint">Search</string>
    <string name="langlinks_empty">This page is not available in other languages.</string>
    <string name="langlinks_no_match">No languages found matching your query.</string>
    <string name="langlinks_activity_title">Other languages</string>
    <string name="menu_save_changes">Save changes</string>
    <string name="edit_section_error_retry">Retry</string>
    <string name="dialog_saving_in_progress">Saving…</string>
    <string name="edit_saved_successfully">Edit saved!</string>
    <string name="dialog_message_edit_failed">Edit failed!</string>
    <string name="dialog_message_edit_failed_retry">Retry</string>
    <string name="dialog_message_edit_failed_cancel">Cancel</string>
    <string name="dialog_message_leaving_edit">Your changes have not been saved yet. Are you sure you want to leave this page?</string>
    <string name="dialog_message_leaving_edit_leave">Leave</string>
    <string name="dialog_message_leaving_edit_stay">Stay</string>
    <string name="menu_show_toc">Table of Contents</string>
    <string name="search_no_results_found">No results found</string>
    <string name="edit_section_captcha_message">To help protect against automated spam, please enter the words that appear below</string>
    <string name="edit_section_captcha_hint">Repeat words from above</string>
    <string name="title_captcha">Enter CAPTCHA</string>
    <string name="edit_section_captcha_reload">Tap CAPTCHA to reload</string>
    <string name="edit_saved_page_refresh">This saved page may be out of date, and must be refreshed for editing to be enabled. Would you like to refresh the page?</string>
    <string name="nav_item_login" />
    <string name="login_username_hint">Username</string>
    <string name="login_password_hint">Password</string>
    <string name="login_password_show_check">Display password</string>
    <string name="menu_login">Log in</string>
    <string name="login_activity_title">Log in to Akvopedia</string>
    <string name="login_in_progress_dialog_message">Logging you in…</string>
    <string name="login_error_wrong_password">Incorrect password</string>
    <string name="login_error_wrong_username">Incorrect username</string>
    <string name="login_error_illegal">Invalid username</string>
    <string name="login_success_toast">Logged in successfully!</string>
    <string name="login_error_blocked">This user has been blocked</string>
    <string name="login_error_throttled"><![CDATA[Too many login attempts. Wait for a few minutes and try again.]]></string>
    <string name="login_error_unknown">Login failed :(</string>
    <string name="preference_title_logout">Log out</string>
    <string name="toast_logout_complete">Logged out</string>
    <string name="history_empty_title">No recent pages here!</string>
    <string name="history_empty_message">You probably deleted all of them. Next time you go to a page you can get back to it from here.</string>
    <string name="delete_selected_history">Delete</string>
    <string name="wp_stylized"><![CDATA[<big>W</big>IKIPEDI<big>A</big>]]></string>
    <string name="create_account_username_hint">Username</string>
    <string name="login_create_account_link">Don\'t have an account? Join Akvopedia</string>
    <string name="create_account_login_link">Already have an account? Log in</string>
    <string name="create_account_activity_title">Create an account</string>
    <string name="dialog_create_account_checking_progress">Verifying</string>
    <string name="create_account_email_hint">Email (Optional)</string>
    <string name="create_account_password_repeat_hint">Repeat password</string>
    <string name="create_account_passwords_mismatch_error">Passwords don\'t match</string>
    <string name="create_account_email_error">Invalid email address</string>
    <string name="create_account_username_exists_error">Username already in use</string>
    <string name="create_account_ip_throttle_error">Too many accounts created from this IP address. Try again later.</string>
    <string name="create_account_open_proxy_error">This IP address has been blocked from creating accounts.</string>
    <string name="create_account_noname_error">The username you provided is invalid. Please provide another username.</string>
    <string name="create_account_invalid_email_error">The email address you provided is invalid.</string>
    <string name="create_account_password_too_short_error">The password you provided is too short.</string>
    <string name="create_account_blocked_anon_error">You cannot create an account because your IP address is blocked.</string>
    <string name="create_account_blocked_error">You cannot create an account because your account is blocked.</string>
    <string name="create_account_password_name_match_error">Your username and your password must be different.</string>
    <string name="create_account_generic_error">Could not create account</string>
    <string name="create_account_next">Next</string>
    <string name="create_account_button">Create account</string>
    <string name="preferences_general_heading">General</string>
    <string name="wikipedia_app_faq">Akvopedia App FAQ</string>
    <string name="zero_charged_verbiage">Wikipedia Zero is off</string>
    <string name="zero_search_hint">Search Wikipedia Zero</string>
    <string name="zero_warn_when_leaving">Warn if leaving Wikipedia Zero</string>
    <string name="zero_warn_when_leaving_summary">If your mobile operator waives data access charges for the Wikipedia app through a Wikipedia Zero partnership, leaving this setting checked helps you know when you are leaving the Wikipedia app and could be charged.</string>
    <string name="zero_webpage_title">Wikipedia Zero FAQ</string>
    <string name="zero_wikipedia_zero_heading">Wikipedia Zero</string>
    <string name="zero_interstitial_title">Leaving Wikipedia Zero</string>
    <string name="zero_interstitial_leave_app">Data charges may apply. Continue to external site?</string>
    <string name="zero_interstitial_continue">Leave</string>
    <string name="zero_interstitial_cancel">Stay Here</string>
    <string name="zero_learn_more">Data charges are waived for this Wikipedia app.</string>
    <string name="zero_learn_more_learn_more">Read more</string>
    <string name="zero_learn_more_dismiss">Dismiss</string>
    <string name="edit_preview_fetching_dialog_message">Fetching preview…</string>
    <string name="send_feedback">Send app feedback</string>
    <string name="nav_item_random">Random</string>
    <string name="create_account_account_created_toast">Account created!</string>
    <string name="preferences_privacy_settings_heading">Privacy</string>
    <string name="preference_title_eventlogging_opt_in">Send usage reports</string>
    <string name="preference_summary_eventlogging_opt_in">Allow Wikimedia to collect information about how you use the app to make the app better</string>
    <string name="preference_title_auto_upload_crash_reports">Send crash reports</string>
    <string name="preference_summary_auto_upload_crash_reports">Allow the app to send crash reports to HockeyApp / a third-party service provider automatically so that we can review your crash and fix the bug faster and more easily.</string>
    <string name="editing_error_spamblacklist">Links to blocked domains (%s) detected. Please remove them and try again.</string>
    <string name="history_search_list_hint">Search history</string>
    <string name="history_search_empty_message">No pages found matching your query.</string>
    <string name="error_can_not_process_link">Could not display this link</string>
    <string name="page_protected_autoconfirmed">This page has been semi-protected.</string>
    <string name="page_protected_sysop">This page has been fully protected.</string>
    <string name="page_protected_other">This page has been protected to the following levels: %s</string>
    <string name="nav_item_reading_lists">Reading lists</string>
    <string name="about_app">About this app</string>
    <string name="app_slogan">The open water &amp; sanitation resource</string>
    <string name="copyrightMessage">Copyright © Stichting Akvo</string>
    <string name="legalInformation">Legal information</string>
</resources>