<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/window_background_color"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top"
            android:layout_marginTop="-10dp"
            android:contentDescription="@null"
            android:src="@drawable/ic_akvopedia_logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-10dp"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:text="@string/app_slogan"
            android:textAllCaps="false"
            android:textColor="#232323"
            android:textSize="17dp"
            tools:ignore="SpUsage" />

        <TextView
            android:id="@+id/about_version_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:padding="10dp"
            android:textColor="#232323"
            android:textSize="15sp"
            android:textStyle="normal"
            tools:text="Version 1.0" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top"
            android:layout_marginTop="10dp"
            android:contentDescription="@null"
            android:minHeight="80dp"
            android:minWidth="80dp"
            android:src="@drawable/w_nav_mark" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:text="@string/copyrightMessage"
            android:textColor="#232323"
            android:textSize="15sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/link_software_notices_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/legalInformation"
            android:textColor="@color/link_dark"
            android:textSize="15sp" />

    </LinearLayout>
</LinearLayout>